--- a/2장/2.4 Model Selection 모듈 소개.ipynb
+++ b/2장/2.4 Model Selection 모듈 소개.ipynb
@@ -189,9 +189,9 @@
     {
      "data": {
       "text/plain": [
-       "2    50\n",
-       "1    50\n",
        "0    50\n",
+       "1    50\n",
+       "2    50\n",
        "Name: label, dtype: int64"
       ]
      },
@@ -222,24 +222,24 @@
      "text": [
       "## 교차 검증: 1\n",
       "학습 레이블 데이터 분포:\n",
-      " 2    50\n",
-      "1    50\n",
+      " 1    50\n",
+      "2    50\n",
       "Name: label, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
       " 0    50\n",
       "Name: label, dtype: int64\n",
       "## 교차 검증: 2\n",
       "학습 레이블 데이터 분포:\n",
-      " 2    50\n",
-      "0    50\n",
+      " 0    50\n",
+      "2    50\n",
       "Name: label, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
       " 1    50\n",
       "Name: label, dtype: int64\n",
       "## 교차 검증: 3\n",
       "학습 레이블 데이터 분포:\n",
-      " 1    50\n",
-      "0    50\n",
+      " 0    50\n",
+      "1    50\n",
       "Name: label, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
       " 2    50\n",
@@ -272,35 +272,35 @@
      "text": [
       "## 교차 검증: 1\n",
       "학습 레이블 데이터 분포:\n",
-      " 2    33\n",
-      "1    33\n",
+      " 2    34\n",
       "0    33\n",
+      "1    33\n",
       "Name: label, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
-      " 2    17\n",
+      " 0    17\n",
       "1    17\n",
-      "0    17\n",
+      "2    16\n",
       "Name: label, dtype: int64\n",
       "## 교차 검증: 2\n",
       "학습 레이블 데이터 분포:\n",
-      " 2    33\n",
-      "1    33\n",
+      " 1    34\n",
       "0    33\n",
+      "2    33\n",
       "Name: label, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
-      " 2    17\n",
-      "1    17\n",
-      "0    17\n",
+      " 0    17\n",
+      "2    17\n",
+      "1    16\n",
       "Name: label, dtype: int64\n",
       "## 교차 검증: 3\n",
       "학습 레이블 데이터 분포:\n",
-      " 2    34\n",
-      "1    34\n",
-      "0    34\n",
+      " 0    34\n",
+      "1    33\n",
+      "2    33\n",
       "Name: label, dtype: int64\n",
       "검증 레이블 데이터 분포:\n",
-      " 2    16\n",
-      "1    16\n",
+      " 1    17\n",
+      "2    17\n",
       "0    16\n",
       "Name: label, dtype: int64\n"
      ]
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -331,23 +331,23 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "#1 교차 검증 정확도 :0.9804, 학습 데이터 크기: 99, 검증 데이터 크기: 51\n",
+      "#1 교차 검증 정확도 :0.98, 학습 데이터 크기: 100, 검증 데이터 크기: 50\n",
       "#1 검증 세트 인덱스:[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  50\n",
       "  51  52  53  54  55  56  57  58  59  60  61  62  63  64  65  66 100 101\n",
-      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116]\n",
+      " 102 103 104 105 106 107 108 109 110 111 112 113 114 115]\n",
       "\n",
-      "#2 교차 검증 정확도 :0.9216, 학습 데이터 크기: 99, 검증 데이터 크기: 51\n",
+      "#2 교차 검증 정확도 :0.94, 학습 데이터 크기: 100, 검증 데이터 크기: 50\n",
       "#2 검증 세트 인덱스:[ 17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  67\n",
-      "  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82  83 117 118\n",
-      " 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133]\n",
+      "  68  69  70  71  72  73  74  75  76  77  78  79  80  81  82 116 117 118\n",
+      " 119 120 121 122 123 124 125 126 127 128 129 130 131 132]\n",
       "\n",
-      "#3 교차 검증 정확도 :0.9792, 학습 데이터 크기: 102, 검증 데이터 크기: 48\n",
-      "#3 검증 세트 인덱스:[ 34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  84  85\n",
-      "  86  87  88  89  90  91  92  93  94  95  96  97  98  99 134 135 136 137\n",
-      " 138 139 140 141 142 143 144 145 146 147 148 149]\n",
+      "#3 교차 검증 정확도 :0.98, 학습 데이터 크기: 100, 검증 데이터 크기: 50\n",
+      "#3 검증 세트 인덱스:[ 34  35  36  37  38  39  40  41  42  43  44  45  46  47  48  49  83  84\n",
+      "  85  86  87  88  89  90  91  92  93  94  95  96  97  98  99 133 134 135\n",
+      " 136 137 138 139 140 141 142 143 144 145 146 147 148 149]\n",
       "\n",
-      "## 교차 검증별 정확도: [0.9804 0.9216 0.9792]\n",
-      "## 평균 검증 정확도: 0.9604\n"
+      "## 교차 검증별 정확도: [0.98 0.94 0.98]\n",
+      "## 평균 검증 정확도: 0.9667\n"
      ]
     }
    ],
@@ -379,7 +379,7 @@
     "    \n",
     "# 교차 검증별 정확도 및 평균 정확도 계산 \n",
     "print('\\n## 교차 검증별 정확도:', np.round(cv_accuracy, 4))\n",
-    "print('## 평균 검증 정확도:', np.mean(cv_accuracy)) "
+    "print('## 평균 검증 정확도:', np.round(np.mean(cv_accuracy), 4))"
    ]
   },
   {
@@ -391,15 +391,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "교차 검증별 정확도: [0.9804 0.9216 0.9792]\n",
-      "평균 검증 정확도: 0.9604\n"
+      "교차 검증별 정확도: [0.98 0.94 0.98]\n",
+      "평균 검증 정확도: 0.9667\n"
      ]
     }
    ],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,25 +449,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chkwon\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:122: FutureWarning: You are accessing a training score ('split0_train_score'), which will not be available by default any more in 0.21. If you need training scores, please set return_train_score=True\n",
-      "  warnings.warn(*warn_args, **warn_kwargs)\n",
-      "C:\\Users\\chkwon\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:122: FutureWarning: You are accessing a training score ('split1_train_score'), which will not be available by default any more in 0.21. If you need training scores, please set return_train_score=True\n",
-      "  warnings.warn(*warn_args, **warn_kwargs)\n",
-      "C:\\Users\\chkwon\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:122: FutureWarning: You are accessing a training score ('split2_train_score'), which will not be available by default any more in 0.21. If you need training scores, please set return_train_score=True\n",
-      "  warnings.warn(*warn_args, **warn_kwargs)\n",
-      "C:\\Users\\chkwon\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:122: FutureWarning: You are accessing a training score ('mean_train_score'), which will not be available by default any more in 0.21. If you need training scores, please set return_train_score=True\n",
-      "  warnings.warn(*warn_args, **warn_kwargs)\n",
-      "C:\\Users\\chkwon\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:122: FutureWarning: You are accessing a training score ('std_train_score'), which will not be available by default any more in 0.21. If you need training scores, please set return_train_score=True\n",
-      "  warnings.warn(*warn_args, **warn_kwargs)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -537,18 +521,18 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>{'max_depth': 3, 'min_samples_split': 2}</td>\n",
-       "      <td>0.966667</td>\n",
+       "      <td>0.975000</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.950</td>\n",
+       "      <td>0.975</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>{'max_depth': 3, 'min_samples_split': 3}</td>\n",
-       "      <td>0.966667</td>\n",
+       "      <td>0.975000</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.950</td>\n",
+       "      <td>0.975</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.95</td>\n",
        "    </tr>\n",
@@ -562,19 +546,19 @@
        "1  {'max_depth': 1, 'min_samples_split': 3}         0.700000                5   \n",
        "2  {'max_depth': 2, 'min_samples_split': 2}         0.958333                3   \n",
        "3  {'max_depth': 2, 'min_samples_split': 3}         0.958333                3   \n",
-       "4  {'max_depth': 3, 'min_samples_split': 2}         0.966667                1   \n",
-       "5  {'max_depth': 3, 'min_samples_split': 3}         0.966667                1   \n",
+       "4  {'max_depth': 3, 'min_samples_split': 2}         0.975000                1   \n",
+       "5  {'max_depth': 3, 'min_samples_split': 3}         0.975000                1   \n",
        "\n",
        "   split0_test_score  split1_test_score  split2_test_score  \n",
        "0              0.700                0.7               0.70  \n",
        "1              0.700                0.7               0.70  \n",
        "2              0.925                1.0               0.95  \n",
        "3              0.925                1.0               0.95  \n",
-       "4              0.950                1.0               0.95  \n",
-       "5              0.950                1.0               0.95  "
+       "4              0.975                1.0               0.95  \n",
+       "5              0.975                1.0               0.95  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +589,7 @@
      "output_type": "stream",
      "text": [
       "GridSearchCV 최적 파라미터: {'max_depth': 3, 'min_samples_split': 2}\n",
-      "GridSearchCV 최고 정확도: 0.9667\n"
+      "GridSearchCV 최고 정확도: 0.9750\n"
      ]
     }
    ],
@@ -616,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +630,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -660,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
