--- a/2장/2.5 데이터_전처리.ipynb
+++ b/2장/2.5 데이터_전처리.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "items=['TV','냉장고','전자렌지','컴퓨터','선풍기','선풍기','믹서','믹서']\n",
+    "items=['TV','냉장고','전자레인지','컴퓨터','선풍기','선풍기','믹서','믹서']\n",
     "\n",
     "# LabelEncoder를 객체로 생성한 후 , fit( ) 과 transform( ) 으로 label 인코딩 수행. \n",
     "encoder = LabelEncoder()\n",
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "인코딩 클래스: ['TV' '냉장고' '믹서' '선풍기' '전자렌지' '컴퓨터']\n"
+      "인코딩 클래스: ['TV' '냉장고' '믹서' '선풍기' '전자레인지' '컴퓨터']\n"
      ]
     }
    ],
@@ -65,15 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "디코딩 원본 값: ['전자렌지' '컴퓨터' '믹서' 'TV' '냉장고' '냉장고' '선풍기' '선풍기']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chkwon\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
-      "  if diff:\n"
+      "디코딩 원본 값: ['전자레인지' '컴퓨터' '믹서' 'TV' '냉장고' '냉장고' '선풍기' '선풍기']\n"
      ]
     }
    ],
@@ -115,7 +107,7 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "import numpy as np\n",
     "\n",
-    "items=['TV','냉장고','전자렌지','컴퓨터','선풍기','선풍기','믹서','믹서']\n",
+    "items=['TV','냉장고','전자레인지','컴퓨터','선풍기','선풍기','믹서','믹서']\n",
     "\n",
     "# 먼저 숫자값으로 변환을 위해 LabelEncoder로 변환합니다. \n",
     "encoder = LabelEncoder()\n",
@@ -164,7 +156,7 @@
        "      <th>item_냉장고</th>\n",
        "      <th>item_믹서</th>\n",
        "      <th>item_선풍기</th>\n",
-       "      <th>item_전자렌지</th>\n",
+       "      <th>item_전자레인지</th>\n",
        "      <th>item_컴퓨터</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -246,15 +238,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   item_TV  item_냉장고  item_믹서  item_선풍기  item_전자렌지  item_컴퓨터\n",
-       "0        1         0        0         0          0         0\n",
-       "1        0         1        0         0          0         0\n",
-       "2        0         0        0         0          1         0\n",
-       "3        0         0        0         0          0         1\n",
-       "4        0         0        0         1          0         0\n",
-       "5        0         0        0         1          0         0\n",
-       "6        0         0        1         0          0         0\n",
-       "7        0         0        1         0          0         0"
+       "   item_TV  item_냉장고  item_믹서  item_선풍기  item_전자레인지  item_컴퓨터\n",
+       "0        1         0        0         0           0         0\n",
+       "1        0         1        0         0           0         0\n",
+       "2        0         0        0         0           1         0\n",
+       "3        0         0        0         0           0         1\n",
+       "4        0         0        0         1           0         0\n",
+       "5        0         0        0         1           0         0\n",
+       "6        0         0        1         0           0         0\n",
+       "7        0         0        1         0           0         0"
       ]
      },
      "execution_count": 5,
@@ -265,7 +257,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame({'item':['TV','냉장고','전자렌지','컴퓨터','선풍기','선풍기','믹서','믹서'] })\n",
+    "df = pd.DataFrame({'item':['TV','냉장고','전자레인지','컴퓨터','선풍기','선풍기','믹서','믹서'] })\n",
     "pd.get_dummies(df)"
    ]
   },
@@ -294,16 +286,16 @@
      "text": [
       "feature 들의 평균 값\n",
       "sepal length (cm)    5.843333\n",
-      "sepal width (cm)     3.054000\n",
-      "petal length (cm)    3.758667\n",
-      "petal width (cm)     1.198667\n",
+      "sepal width (cm)     3.057333\n",
+      "petal length (cm)    3.758000\n",
+      "petal width (cm)     1.199333\n",
       "dtype: float64\n",
       "\n",
       "feature 들의 분산 값\n",
       "sepal length (cm)    0.685694\n",
-      "sepal width (cm)     0.188004\n",
-      "petal length (cm)    3.113179\n",
-      "petal width (cm)     0.582414\n",
+      "sepal width (cm)     0.189979\n",
+      "petal length (cm)    3.116278\n",
+      "petal width (cm)     0.581006\n",
       "dtype: float64\n"
      ]
     }
@@ -333,9 +325,9 @@
      "text": [
       "feature 들의 평균 값\n",
       "sepal length (cm)   -1.690315e-15\n",
-      "sepal width (cm)    -1.637024e-15\n",
-      "petal length (cm)   -1.482518e-15\n",
-      "petal width (cm)    -1.623146e-15\n",
+      "sepal width (cm)    -1.842970e-15\n",
+      "petal length (cm)   -1.698641e-15\n",
+      "petal width (cm)    -1.409243e-15\n",
       "dtype: float64\n",
       "\n",
       "feature 들의 분산 값\n",
@@ -373,9 +365,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature들의 최솟값\n",
+      "sepal length (cm)    0.0\n",
+      "sepal width (cm)     0.0\n",
+      "petal length (cm)    0.0\n",
+      "petal width (cm)     0.0\n",
+      "dtype: float64\n",
+      "\n",
+      "feature들의 최댓값\n",
+      "sepal length (cm)    1.0\n",
+      "sepal width (cm)     1.0\n",
+      "petal length (cm)    1.0\n",
+      "petal width (cm)     1.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
@@ -387,9 +399,9 @@
     "\n",
     "# transform()시 scale 변환된 데이터 셋이 numpy ndarry로 반환되어 이를 DataFrame으로 변환\n",
     "iris_df_scaled = pd.DataFrame(data=iris_scaled, columns=iris.feature_names)\n",
-    "print('feature들의 최소 값')\n",
+    "print('feature들의 최솟값')\n",
     "print(iris_df_scaled.min())\n",
-    "print('\\nfeature들의 최대 값')\n",
+    "print('\\nfeature들의 최댓값')\n",
     "print(iris_df_scaled.max())\n"
    ]
   },
@@ -402,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -430,20 +442,22 @@
     }
    ],
    "source": [
-    "# 최소값 0, 최대값 1로 변환하는 MinMaxScaler객체 생성\n",
+    "# MinMaxScaler 객체에 별도의 feature_range 파라미터 값을 지정하지 않으면 0~1 값으로 변환\n",
     "scaler = MinMaxScaler()\n",
-    "# fit()하게 되면 train_array 데이터의 최소값이 0, 최대값이 10으로 설정.  \n",
+    "\n",
+    "# fit()하게 되면 train_array 데이터의 최솟값이 0, 최댓값이 10으로 설정.\n",
     "scaler.fit(train_array)\n",
+    "\n",
     "# 1/10 scale로 train_array 데이터 변환함. 원본 10-> 1로 변환됨.\n",
     "train_scaled = scaler.transform(train_array)\n",
-    " \n",
+    "\n",
     "print('원본 train_array 데이터:', np.round(train_array.reshape(-1), 2))\n",
     "print('Scale된 train_array 데이터:', np.round(train_scaled.reshape(-1), 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -456,18 +470,20 @@
     }
    ],
    "source": [
-    "# 앞에서 생성한 MinMaxScaler에 test_array를 fit()하게 되면 원본 데이터의 최소값이 0, 최대값이 5으로 설정됨 \n",
+    "# MinMaxScaler에 test_array를 fit()하게 되면 원본 데이터의 최솟값이 0, 최댓값이 5로 설정됨\n",
     "scaler.fit(test_array)\n",
-    "# 1/5 scale로 test_array 데이터 변환함. 원본 5->1로 변환.  \n",
+    "\n",
+    "# 1/5 scale로 test_array 데이터 변환함. 원본 5->1로 변환.\n",
     "test_scaled = scaler.transform(test_array)\n",
-    "# train_array 변환 출력\n",
+    "\n",
+    "# test_array의 scale 변환 출력.\n",
     "print('원본 test_array 데이터:', np.round(test_array.reshape(-1), 2))\n",
     "print('Scale된 test_array 데이터:', np.round(test_scaled.reshape(-1), 2))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +521,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
