Update 4.11 스태킹 앙상블.ipynb

--- a/4장/4.11 스태킹 앙상블.ipynb
+++ b/4장/4.11 스태킹 앙상블.ipynb
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CV 셋 기반의 Stacking"
+    "### CV 세트 기반의 스태킹"
    ]
   },
   {
@@ -157,7 +157,7 @@
     "# 개별 기반 모델에서 최종 메타 모델이 사용할 학습 및 테스트용 데이터를 생성하기 위한 함수. \n",
     "def get_stacking_base_datasets(model, X_train_n, y_train_n, X_test_n, n_folds ):\n",
     "    # 지정된 n_folds값으로 KFold 생성.\n",
-    "    kf = KFold(n_splits=n_folds, shuffle=False, random_state=0)\n",
+    "    kf = KFold(n_splits=n_folds, shuffle=False)\n",
     "    #추후에 메타 모델이 사용할 학습 데이터 반환을 위한 넘파이 배열 초기화 \n",
     "    train_fold_pred = np.zeros((X_train_n.shape[0] ,1 ))\n",
     "    test_pred = np.zeros((X_test_n.shape[0],n_folds))\n",
@@ -190,17 +190,41 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Setting a random_state has no effect since shuffle is False. You should leave random_state to its default (None), or set shuffle=True.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m knn_train, knn_test \u001b[38;5;241m=\u001b[39m \u001b[43mget_stacking_base_datasets\u001b[49m\u001b[43m(\u001b[49m\u001b[43mknn_clf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m rf_train, rf_test \u001b[38;5;241m=\u001b[39m get_stacking_base_datasets(rf_clf, X_train, y_train, X_test, \u001b[38;5;241m7\u001b[39m)\n\u001b[0;32m      3\u001b[0m dt_train, dt_test \u001b[38;5;241m=\u001b[39m get_stacking_base_datasets(dt_clf, X_train, y_train, X_test,  \u001b[38;5;241m7\u001b[39m)    \n",
-      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36mget_stacking_base_datasets\u001b[1;34m(model, X_train_n, y_train_n, X_test_n, n_folds)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_stacking_base_datasets\u001b[39m(model, X_train_n, y_train_n, X_test_n, n_folds ):\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;66;03m# 지정된 n_folds값으로 KFold 생성.\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m     kf \u001b[38;5;241m=\u001b[39m \u001b[43mKFold\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_splits\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_folds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshuffle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;66;03m#추후에 메타 모델이 사용할 학습 데이터 반환을 위한 넘파이 배열 초기화 \u001b[39;00m\n\u001b[0;32m      9\u001b[0m     train_fold_pred \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((X_train_n\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] ,\u001b[38;5;241m1\u001b[39m ))\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\pymldgrev2\\lib\\site-packages\\sklearn\\model_selection\\_split.py:435\u001b[0m, in \u001b[0;36mKFold.__init__\u001b[1;34m(self, n_splits, shuffle, random_state)\u001b[0m\n\u001b[0;32m    434\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, n_splits\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m*\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m--> 435\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mn_splits\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_splits\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshuffle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mshuffle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrandom_state\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\pymldgrev2\\lib\\site-packages\\sklearn\\model_selection\\_split.py:296\u001b[0m, in \u001b[0;36m_BaseKFold.__init__\u001b[1;34m(self, n_splits, shuffle, random_state)\u001b[0m\n\u001b[0;32m    293\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshuffle must be True or False; got \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(shuffle))\n\u001b[0;32m    295\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m shuffle \u001b[38;5;129;01mand\u001b[39;00m random_state \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:  \u001b[38;5;66;03m# None is the default\u001b[39;00m\n\u001b[1;32m--> 296\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    297\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSetting a random_state has no effect since shuffle is \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    298\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFalse. You should leave \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    299\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrandom_state to its default (None), or set shuffle=True.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    300\u001b[0m     )\n\u001b[0;32m    302\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_splits \u001b[38;5;241m=\u001b[39m n_splits\n\u001b[0;32m    303\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshuffle \u001b[38;5;241m=\u001b[39m shuffle\n",
-      "\u001b[1;31mValueError\u001b[0m: Setting a random_state has no effect since shuffle is False. You should leave random_state to its default (None), or set shuffle=True."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNeighborsClassifier  model 시작 \n",
+      "\t 폴드 세트:  0  시작 \n",
+      "\t 폴드 세트:  1  시작 \n",
+      "\t 폴드 세트:  2  시작 \n",
+      "\t 폴드 세트:  3  시작 \n",
+      "\t 폴드 세트:  4  시작 \n",
+      "\t 폴드 세트:  5  시작 \n",
+      "\t 폴드 세트:  6  시작 \n",
+      "RandomForestClassifier  model 시작 \n",
+      "\t 폴드 세트:  0  시작 \n",
+      "\t 폴드 세트:  1  시작 \n",
+      "\t 폴드 세트:  2  시작 \n",
+      "\t 폴드 세트:  3  시작 \n",
+      "\t 폴드 세트:  4  시작 \n",
+      "\t 폴드 세트:  5  시작 \n",
+      "\t 폴드 세트:  6  시작 \n",
+      "DecisionTreeClassifier  model 시작 \n",
+      "\t 폴드 세트:  0  시작 \n",
+      "\t 폴드 세트:  1  시작 \n",
+      "\t 폴드 세트:  2  시작 \n",
+      "\t 폴드 세트:  3  시작 \n",
+      "\t 폴드 세트:  4  시작 \n",
+      "\t 폴드 세트:  5  시작 \n",
+      "\t 폴드 세트:  6  시작 \n",
+      "AdaBoostClassifier  model 시작 \n",
+      "\t 폴드 세트:  0  시작 \n",
+      "\t 폴드 세트:  1  시작 \n",
+      "\t 폴드 세트:  2  시작 \n",
+      "\t 폴드 세트:  3  시작 \n",
+      "\t 폴드 세트:  4  시작 \n",
+      "\t 폴드 세트:  5  시작 \n",
+      "\t 폴드 세트:  6  시작 \n"
      ]
     }
    ],
@@ -213,9 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "원본 학습 피처 데이터 Shape: (455, 30) 원본 테스트 피처 Shape: (114, 30)\n",
+      "스태킹 학습 피처 데이터 Shape: (455, 4) 스태킹 테스트 피처 데이터 Shape: (114, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "Stack_final_X_train = np.concatenate((knn_train, rf_train, dt_train, ada_train), axis=1)\n",
     "Stack_final_X_test = np.concatenate((knn_test, rf_test, dt_test, ada_test), axis=1)\n",
@@ -226,9 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "최종 메타 모델의 예측 정확도: 0.9737\n"
+     ]
+    }
+   ],
    "source": [
     "lr_final.fit(Stack_final_X_train, y_train)\n",
     "stack_final = lr_final.predict(Stack_final_X_test)\n",
