--- a/2장/2.5 데이터_전처리.ipynb
+++ b/2장/2.5 데이터_전처리.ipynb
@@ -109,21 +109,19 @@
     "\n",
     "items=['TV','냉장고','전자레인지','컴퓨터','선풍기','선풍기','믹서','믹서']\n",
     "\n",
-    "# 먼저 숫자값으로 변환을 위해 LabelEncoder로 변환합니다. \n",
-    "encoder = LabelEncoder()\n",
-    "encoder.fit(items)\n",
-    "labels = encoder.transform(items)\n",
-    "# 2차원 데이터로 변환합니다. \n",
-    "labels = labels.reshape(-1,1)\n",
+    "# 2차원 ndarray로 변환합니다. \n",
+    "items = np.array(items).reshape(-1, 1)\n",
     "\n",
     "# 원-핫 인코딩을 적용합니다. \n",
     "oh_encoder = OneHotEncoder()\n",
-    "oh_encoder.fit(labels)\n",
-    "oh_labels = oh_encoder.transform(labels)\n",
+    "oh_encoder.fit(items)\n",
+    "oh_labels = oh_encoder.transform(items)\n",
+    "\n",
+    "# OneHotEncoder로 변환한 결과는 희소행렬이므로 toarray()를 이용해 밀집 행렬로 변환. \n",
     "print('원-핫 인코딩 데이터')\n",
     "print(oh_labels.toarray())\n",
     "print('원-핫 인코딩 데이터 차원')\n",
-    "print(oh_labels.shape)"
+    "print(oh_labels.shape)\n"
    ]
   },
   {
