--- a/9장/9.8 파이썬 추천 시스템 패키지 - Surprise.ipynb
+++ b/9장/9.8 파이썬 추천 시스템 패키지 - Surprise.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1.1\n"
+     ]
+    }
+   ],
    "source": [
     "import surprise \n",
     "\n",
@@ -20,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,19 +40,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset ml-100k could not be found. Do you want to download it? [Y/n] Y\n",
+      "Trying to download dataset from https://files.grouplens.org/datasets/movielens/ml-100k.zip...\n",
+      "Done! Dataset ml-100k has been saved to C:\\Users\\yong/.surprise_data/ml-100k\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 실행하면 다음 오류가 발생합니다.\n",
+    "#\"URLError: <urlopen error [WinError 10060] 연결된 구성원으로부터 응답이 없어 연결하지 못했거나, 호스트로부터 응답이 없어 연결이 끊어졌습니다>\"\n",
+    "# 데이터셋을 제공하는 grouplens.org 사이트에 https가 아닌 http로 요청하면 응답하지 않는 것이 원인으로 보입니다. \n",
+    "# 임시방편으로, 설치된 surprise 패키지의 builtin_datasets.py 파일을 찾아서 url 변수를 수정해서 진행했습니다.\n",
+    "data = Dataset.load_builtin('ml-100k') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = Dataset.load_builtin('ml-100k') \n",
     "trainset, testset = train_test_split(data, test_size=.25, random_state=0) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x2acfabd7460>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "algo = SVD()\n",
     "algo.fit(trainset) "
@@ -52,9 +95,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prediction type : <class 'list'>  size: 25000\n",
+      "prediction 결과의 최초 5개 추출\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[Prediction(uid='120', iid='282', r_ui=4.0, est=3.6993549614667023, details={'was_impossible': False}),\n",
+       " Prediction(uid='882', iid='291', r_ui=4.0, est=3.7309020300524804, details={'was_impossible': False}),\n",
+       " Prediction(uid='535', iid='507', r_ui=5.0, est=4.073491699549143, details={'was_impossible': False}),\n",
+       " Prediction(uid='697', iid='244', r_ui=5.0, est=3.445379177886461, details={'was_impossible': False}),\n",
+       " Prediction(uid='751', iid='385', r_ui=4.0, est=3.3069296621837085, details={'was_impossible': False})]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predictions = algo.test( testset )\n",
     "print('prediction type :',type(predictions), ' size:',len(predictions))\n",
@@ -64,18 +130,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('120', '282', 3.6993549614667023),\n",
+       " ('882', '291', 3.7309020300524804),\n",
+       " ('535', '507', 4.073491699549143)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[ (pred.uid, pred.iid, pred.est) for pred in predictions[:3] ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: 196        item: 302        r_ui = None   est = 4.20   {'was_impossible': False}\n"
+     ]
+    }
+   ],
    "source": [
     "# 사용자 아이디, 아이템 아이디는 문자열로 입력해야 함. \n",
     "uid = str(196)\n",
@@ -86,9 +173,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.9463\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9463308291168556"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "accuracy.rmse(predictions)"
    ]
@@ -102,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,9 +232,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.8682\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8681952927143516"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainset, testset = train_test_split(data, test_size=.25, random_state=0)\n",
     "\n",
@@ -144,9 +267,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 0.8682\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8681952927143516"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from surprise import Reader, Dataset\n",
@@ -173,9 +314,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n",
+      "\n",
+      "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
+      "RMSE (testset)    0.8655  0.8810  0.8742  0.8728  0.8740  0.8735  0.0049  \n",
+      "MAE (testset)     0.6670  0.6775  0.6693  0.6708  0.6701  0.6710  0.0035  \n",
+      "Fit time          3.12    3.14    3.09    3.12    3.16    3.13    0.02    \n",
+      "Test time         0.09    0.16    0.16    0.09    0.16    0.13    0.03    \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'test_rmse': array([0.86547287, 0.88096646, 0.87422598, 0.87282111, 0.87399766]),\n",
+       " 'test_mae': array([0.66696611, 0.67749962, 0.66932577, 0.67084667, 0.67013823]),\n",
+       " 'fit_time': (3.115064859390259,\n",
+       "  3.1385486125946045,\n",
+       "  3.0948054790496826,\n",
+       "  3.1215593814849854,\n",
+       "  3.1553432941436768),\n",
+       " 'test_time': (0.09424209594726562,\n",
+       "  0.15726327896118164,\n",
+       "  0.15672945976257324,\n",
+       "  0.0942380428314209,\n",
+       "  0.15717124938964844)}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from surprise.model_selection import cross_validate \n",
     "\n",
@@ -190,9 +366,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.878132025131367\n",
+      "{'n_epochs': 20, 'n_factors': 50}\n"
+     ]
+    }
+   ],
    "source": [
     "from surprise.model_selection import GridSearchCV\n",
     "\n",
@@ -219,9 +404,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DatasetAutoFolds' object has no attribute 'global_mean'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [16]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m data \u001b[38;5;241m=\u001b[39m Dataset\u001b[38;5;241m.\u001b[39mload_from_df(ratings[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muserId\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmovieId\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrating\u001b[39m\u001b[38;5;124m'\u001b[39m]], reader)\n\u001b[0;32m      3\u001b[0m algo \u001b[38;5;241m=\u001b[39m SVD(n_factors\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m \u001b[43malgo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\pymldgrev2\\lib\\site-packages\\surprise\\prediction_algorithms\\matrix_factorization.pyx:155\u001b[0m, in \u001b[0;36msurprise.prediction_algorithms.matrix_factorization.SVD.fit\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\pymldgrev2\\lib\\site-packages\\surprise\\prediction_algorithms\\matrix_factorization.pyx:204\u001b[0m, in \u001b[0;36msurprise.prediction_algorithms.matrix_factorization.SVD.sgd\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DatasetAutoFolds' object has no attribute 'global_mean'"
+     ]
+    }
+   ],
    "source": [
     "# 아래 코드는 train_test_split( )으로 분리되지 않는 Dataset에 fit( )을 호출하여 오류를 발생합니다.\n",
     "data = Dataset.load_from_df(ratings[['userId', 'movieId', 'rating']], reader)\n",
@@ -231,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,9 +446,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x2acfab76d40>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "algo = SVD(n_epochs=20, n_factors=50, random_state=0)\n",
     "algo.fit(trainset)\n"
@@ -257,9 +467,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "사용자 아이디 9는 영화 아이디 42의 평점 없음\n",
+      "    movieId                   title              genres\n",
+      "38       42  Dead Presidents (1995)  Action|Crime|Drama\n"
+     ]
+    }
+   ],
    "source": [
     "# 영화에 대한 상세 속성 정보 DataFrame로딩\n",
     "movies = pd.read_csv('./ml-latest-small/movies.csv')\n",
@@ -274,9 +494,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user: 9          item: 42         r_ui = None   est = 3.13   {'was_impossible': False}\n"
+     ]
+    }
+   ],
    "source": [
     "uid = str(9)\n",
     "iid = str(42)\n",
@@ -286,9 +514,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "평점 매긴 영화수: 46 추천대상 영화수: 9696 전체 영화수: 9742\n"
+     ]
+    }
+   ],
    "source": [
     "def get_unseen_surprise(ratings, movies, userId):\n",
     "    #입력값으로 들어온 userId에 해당하는 사용자가 평점을 매긴 모든 영화를 리스트로 생성\n",
@@ -309,9 +545,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "평점 매긴 영화수: 46 추천대상 영화수: 9696 전체 영화수: 9742\n",
+      "##### Top-10 추천 영화 리스트 #####\n",
+      "Usual Suspects, The (1995) : 4.306302135700814\n",
+      "Star Wars: Episode IV - A New Hope (1977) : 4.281663842987387\n",
+      "Pulp Fiction (1994) : 4.278152632122759\n",
+      "Silence of the Lambs, The (1991) : 4.226073566460876\n",
+      "Godfather, The (1972) : 4.1918097904381995\n",
+      "Streetcar Named Desire, A (1951) : 4.154746591122658\n",
+      "Star Wars: Episode V - The Empire Strikes Back (1980) : 4.122016128534504\n",
+      "Star Wars: Episode VI - Return of the Jedi (1983) : 4.108009609093436\n",
+      "Goodfellas (1990) : 4.083464936588478\n",
+      "Glory (1989) : 4.07887165526957\n"
+     ]
+    }
+   ],
    "source": [
     "def recomm_movie_by_surprise(algo, userId, unseen_movies, top_n=10):\n",
     "    # 알고리즘 객체의 predict() 메서드를 평점이 없는 영화에 반복 수행한 후 결과를 list 객체로 저장\n",
@@ -347,7 +602,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -361,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
