--- a/8장/8.6 토픽 모델링(Topic Modeling) - 20 뉴스그룹.ipynb
+++ b/8장/8.6 토픽 모델링(Topic Modeling) - 20 뉴스그룹.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.decomposition import LatentDirichletAllocation\n",
     "\n",
-    "# 모토사이클, 야구, 그래픽스, 윈도우즈, 중동, 기독교, 의학, 우주 주제를 추출. \n",
+    "# 모터사이클, 야구, 그래픽스, 윈도우즈, 중동, 기독교, 의학, 우주 주제를 추출. \n",
     "cats = ['rec.motorcycles', 'rec.sport.baseball', 'comp.graphics', 'comp.windows.x',\n",
     "        'talk.politics.mideast', 'soc.religion.christian', 'sci.electronics', 'sci.med'  ]\n",
     "\n",
@@ -26,7 +26,7 @@
     "news_df= fetch_20newsgroups(subset='all',remove=('headers', 'footers', 'quotes'), \n",
     "                            categories=cats, random_state=0)\n",
     "\n",
-    "#LDA 는 Count기반의 Vectorizer만 적용합니다.  \n",
+    "#LDA는 Count 기반의 Vectorizer만 적용합니다.  \n",
     "count_vect = CountVectorizer(max_df=0.95, max_features=1000, min_df=2, stop_words='english', ngram_range=(1,2))\n",
     "feat_vect = count_vect.fit_transform(news_df.data)\n",
     "print('CountVectorizer Shape:', feat_vect.shape)"
@@ -34,29 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chkwon\\Anaconda3\\lib\\site-packages\\sklearn\\decomposition\\online_lda.py:536: DeprecationWarning: The default value for 'learning_method' will be changed from 'online' to 'batch' in the release 0.20. This warning was introduced in 0.18.\n",
-      "  DeprecationWarning)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "LatentDirichletAllocation(batch_size=128, doc_topic_prior=None,\n",
-       "             evaluate_every=-1, learning_decay=0.7, learning_method=None,\n",
-       "             learning_offset=10.0, max_doc_update_iter=100, max_iter=10,\n",
-       "             mean_change_tol=0.001, n_components=8, n_jobs=1,\n",
-       "             n_topics=None, perp_tol=0.1, random_state=0,\n",
-       "             topic_word_prior=None, total_samples=1000000.0, verbose=0)"
+       "LatentDirichletAllocation(n_components=8, random_state=0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,22 +68,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[4.76415412e+00, 7.32035553e+01, 1.25197989e-01, ...,\n",
-       "        1.22458816e+02, 1.25230793e-01, 1.09228801e+02],\n",
-       "       [1.25128874e-01, 2.72275563e+00, 1.25032067e-01, ...,\n",
-       "        4.05483014e+00, 1.25201248e-01, 1.25936924e-01],\n",
-       "       [1.31387985e-01, 1.25043289e-01, 1.25490482e-01, ...,\n",
-       "        5.34009231e+01, 1.41931826e-01, 4.48156799e+01],\n",
+       "array([[3.60992018e+01, 1.35626798e+02, 2.15751867e+01, ...,\n",
+       "        3.02911688e+01, 8.66830093e+01, 6.79285199e+01],\n",
+       "       [1.25199920e-01, 1.44401815e+01, 1.25045596e-01, ...,\n",
+       "        1.81506995e+02, 1.25097844e-01, 9.39593286e+01],\n",
+       "       [3.34762663e+02, 1.25176265e-01, 1.46743299e+02, ...,\n",
+       "        1.25105772e-01, 3.63689741e+01, 1.25025218e-01],\n",
        "       ...,\n",
-       "       [1.25238487e-01, 1.25171127e-01, 1.25045244e-01, ...,\n",
-       "        2.98496263e+02, 1.25117657e-01, 1.25271339e-01],\n",
-       "       [2.76601555e+00, 3.84121246e+02, 1.25026823e-01, ...,\n",
-       "        1.25961528e+01, 2.20914848e+02, 4.50744569e+01],\n",
-       "       [4.89866042e+02, 8.38133615e+01, 1.85898507e+02, ...,\n",
-       "        4.91485772e+00, 7.17143691e+01, 1.48487732e+01]])"
+       "       [3.60204965e+01, 2.08640688e+01, 4.29606813e+00, ...,\n",
+       "        1.45056650e+01, 8.33854413e+00, 1.55690009e+01],\n",
+       "       [1.25128711e-01, 1.25247756e-01, 1.25005143e-01, ...,\n",
+       "        9.17278769e+01, 1.25177668e-01, 3.74575887e+01],\n",
+       "       [5.49258690e+01, 4.47009532e+00, 9.88524814e+00, ...,\n",
+       "        4.87048440e+01, 1.25034678e-01, 1.25074632e-01]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,21 +103,29 @@
      "output_type": "stream",
      "text": [
       "Topic # 0\n",
-      "just time year don said like know didn bike good years got game think going\n",
+      "year 10 game medical health team 12 20 disease cancer 1993 games years patients good\n",
       "Topic # 1\n",
-      "image graphics jpeg dos software thanks color data images gif does format computer pc information\n",
+      "don just like know people said think time ve didn right going say ll way\n",
       "Topic # 2\n",
-      "god jesus church christ christian people believe christians bible faith sin paul man life team\n",
+      "image file jpeg program gif images output format files color entry 00 use bit 03\n",
       "Topic # 3\n",
-      "medical research health disease 1993 information patients cancer number hiv study use 10 april treatment\n",
+      "like know don think use does just good time book read information people used post\n",
       "Topic # 4\n",
-      "file program window use server version display available windows ftp output code sun set motif\n",
+      "armenian israel armenians jews turkish people israeli jewish government war dos dos turkey arab armenia 000\n",
       "Topic # 5\n",
-      "don like just know think does people way make good problem want use time ve\n",
+      "edu com available graphics ftp data pub motif mail widget software mit information version sun\n",
       "Topic # 6\n",
-      "armenian people israel armenians jews turkish jewish israeli government war said turkey arab 000 armenia\n",
+      "god people jesus church believe christ does christian say think christians bible faith sin life\n",
       "Topic # 7\n",
-      "edu com 00 10 dos dos 12 24 pub mail cs 11 16 ac 3d 04\n"
+      "use dos thanks windows using window does display help like problem server need know run\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\yong\\anaconda3\\envs\\pymldgrev2\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
+      "  warnings.warn(msg, category=FutureWarning)\n"
      ]
     }
    ],
@@ -157,7 +152,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
