--- a/8장/8.9 한글 텍스트 처리 _ 네이버 영화 평점 감성 분석.ipynb
+++ b/8장/8.9 한글 텍스트 처리 _ 네이버 영화 평점 감성 분석.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,19 +33,19 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>9976970</td>\n",
        "      <td>아 더빙.. 진짜 짜증나네요 목소리</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>3819312</td>\n",
        "      <td>흠...포스터보고 초딩영화줄....오버연기조차 가볍지 않구나</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>10265843</td>\n",
        "      <td>너무재밓었다그래서보는것을추천한다</td>\n",
        "      <td>0</td>\n",
@@ -61,7 +61,7 @@
        "2  10265843                  너무재밓었다그래서보는것을추천한다      0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,21 +112,21 @@
     "test_df = test_df.fillna(' ')\n",
     "test_df['document'] = test_df['document'].apply( lambda x : re.sub(r\"\\d+\", \" \", x) )\n",
     "\n",
-    "# 개정판 소스 코드 변경(2019.12.24)\n",
+    "# id 칼럼 삭제 수행\n",
     "train_df.drop('id', axis=1, inplace=True) \n",
     "test_df.drop('id', axis=1, inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\KwonChulmin\\Anaconda3\\lib\\site-packages\\konlpy\\tag\\_okt.py:16: UserWarning: \"Twitter\" has changed to \"Okt\" since KoNLPy v0.4.5.\n",
+      "C:\\Users\\yong\\anaconda3\\envs\\pymldgrev2\\lib\\site-packages\\konlpy\\tag\\_okt.py:17: UserWarning: \"Twitter\" has changed to \"Okt\" since KoNLPy v0.4.5.\n",
       "  warn('\"Twitter\" has changed to \"Okt\" since KoNLPy v0.4.5.')\n"
      ]
     }
@@ -143,9 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\yong\\anaconda3\\envs\\pymldgrev2\\lib\\site-packages\\sklearn\\feature_extraction\\text.py:516: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -159,34 +168,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 5 candidates, totalling 15 fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  15 out of  15 | elapsed:   43.6s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 5 candidates, totalling 15 fits\n",
       "{'C': 3.5} 0.8593\n"
      ]
     }
    ],
    "source": [
     "# Logistic Regression 을 이용하여 감성 분석 Classification 수행. \n",
-    "lg_clf = LogisticRegression(random_state=0)\n",
+    "lg_clf = LogisticRegression(random_state=0, solver='liblinear')\n",
     "\n",
     "# Parameter C 최적화를 위해 GridSearchCV 를 이용. \n",
     "params = { 'C': [1 ,3.5, 4.5, 5.5, 10 ] }\n",
@@ -197,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -245,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
