--- a/9장/9.5 컨텐츠 기반 필터링 실습 _ TMDB 5000 Movie Dataset.ipynb
+++ b/9장/9.5 컨텐츠 기반 필터링 실습 _ TMDB 5000 Movie Dataset.ipynb
@@ -303,8 +303,7 @@
      "output_type": "stream",
      "text": [
       "(4803, 4803)\n",
-      "[[1.         0.59628479 0.4472136  ... 0.         0.         0.        ]\n",
-      " [0.59628479 1.         0.4        ... 0.         0.         0.        ]]\n"
+      "[[1.         0.59628479 0.4472136  ... 0.         0.         0.        ]]\n"
      ]
     }
    ],
@@ -313,7 +312,7 @@
     "\n",
     "genre_sim = cosine_similarity(genre_mat, genre_mat)\n",
     "print(genre_sim.shape)\n",
-    "print(genre_sim[:2])\n"
+    "print(genre_sim[:1])\n"
    ]
   },
   {
@@ -478,7 +477,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -635,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +753,7 @@
        "2731    The Godfather: Part II           8.3       8.079586        3338"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +873,7 @@
        "2839                     Rounders           6.9       6.530427"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +906,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -921,7 +920,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
