--- a/9장/9.7 행렬 분해 기반의 잠재 요인 협업 필터링 실습.ipynb
+++ b/9장/9.7 행렬 분해 기반의 잠재 요인 협업 필터링 실습.ipynb
@@ -96,21 +96,21 @@
       "### iteration step :  20  rmse :  0.5115539026853442\n",
       "### iteration step :  30  rmse :  0.37261628282537446\n",
       "### iteration step :  40  rmse :  0.2960818299181014\n",
-      "### iteration step :  50  rmse :  0.2520353192341642\n",
+      "### iteration step :  50  rmse :  0.2520353192341643\n",
       "### iteration step :  60  rmse :  0.22487503275269854\n",
-      "### iteration step :  70  rmse :  0.20685455302331537\n",
-      "### iteration step :  80  rmse :  0.19413418783028685\n",
-      "### iteration step :  90  rmse :  0.18470082002720403\n",
+      "### iteration step :  70  rmse :  0.2068545530233154\n",
+      "### iteration step :  80  rmse :  0.19413418783028688\n",
+      "### iteration step :  90  rmse :  0.18470082002720406\n",
       "### iteration step :  100  rmse :  0.17742927527209104\n",
-      "### iteration step :  110  rmse :  0.17165226964707486\n",
-      "### iteration step :  120  rmse :  0.1669518194687172\n",
+      "### iteration step :  110  rmse :  0.1716522696470749\n",
+      "### iteration step :  120  rmse :  0.16695181946871723\n",
       "### iteration step :  130  rmse :  0.16305292191997542\n",
-      "### iteration step :  140  rmse :  0.15976691929679643\n",
+      "### iteration step :  140  rmse :  0.15976691929679646\n",
       "### iteration step :  150  rmse :  0.1569598699945732\n",
-      "### iteration step :  160  rmse :  0.15453398186715428\n",
+      "### iteration step :  160  rmse :  0.1545339818671543\n",
       "### iteration step :  170  rmse :  0.15241618551077643\n",
-      "### iteration step :  180  rmse :  0.15055080739628307\n",
-      "### iteration step :  190  rmse :  0.1488947091323209\n"
+      "### iteration step :  180  rmse :  0.1505508073962831\n",
+      "### iteration step :  190  rmse :  0.14889470913232092\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -295,17 +295,11 @@
        "2                 4.237972              1.900366                     3.392859   \n",
        "3                 1.997043              0.924908                     2.970700   \n",
        "\n",
-       "title   *batteries not included (1987)  \\\n",
-       "userId                                   \n",
-       "1                             3.972454   \n",
-       "2                             3.647421   \n",
-       "3                             2.551446   \n",
-       "\n",
-       "title                     ...                      Zulu (2013)  [REC] (2007)  \\\n",
-       "userId                    ...                                                  \n",
-       "1                         ...                         1.402608      4.208382   \n",
-       "2                         ...                         0.973811      3.528264   \n",
-       "3                         ...                         0.520354      1.709494   \n",
+       "title   *batteries not included (1987)  ...  Zulu (2013)  [REC] (2007)  \\\n",
+       "userId                                  ...                              \n",
+       "1                             3.972454  ...     1.402608      4.208382   \n",
+       "2                             3.647421  ...     0.973811      3.528264   \n",
+       "3                             2.551446  ...     0.520354      1.709494   \n",
        "\n",
        "title   [REC]² (2009)  [REC]³ 3 Génesis (2012)  \\\n",
        "userId                                           \n",
@@ -334,7 +328,7 @@
        "[3 rows x 9719 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +469,7 @@
        "Star Wars: Episode V - The Empire Strikes Back ...    4.989601"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +496,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -516,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
