Update 8.7 문서 군집화 소개와 실습(Opinion Review 데이터 세트).ipynb

--- a/8장/8.7 문서 군집화 소개와 실습(Opinion Review 데이터 세트).ipynb
+++ b/8장/8.7 문서 군집화 소개와 실습(Opinion Review 데이터 세트).ipynb
@@ -91,34 +91,42 @@
    "source": [
     "import pandas as pd\n",
     "import glob, os\n",
-    "import warnings\n",
+    "import warnings \n",
     "warnings.filterwarnings('ignore')\n",
     "pd.set_option('display.max_colwidth', 700)\n",
     "\n",
-    "# 다음은 저자의 컴퓨터에서 압축 파일을 풀어놓은 디렉터리이니, 각자 디렉터리를 다시 설정합니다.\n",
-    "path = r'OpinosisDataset1.0\\topics'\n",
+    "# 아래는 제 컴퓨터에서 압축 파일을 풀어 놓은 디렉터리이니, 여러분의 디렉터리를 설정해 주세요  \n",
+    "path = 'OpinosisDataset1.0/topics'  \n",
     "# path로 지정한 디렉터리 밑에 있는 모든 .data 파일들의 파일명을 리스트로 취합\n",
     "all_files = glob.glob(os.path.join(path, \"*.data\"))    \n",
     "filename_list = []\n",
     "opinion_text = []\n",
     "\n",
     "# 개별 파일들의 파일명은 filename_list 리스트로 취합, \n",
-    "# 개별 파일들의 파일내용은 DataFrame로딩 후 다시 string으로 변환하여 opinion_text 리스트로 취합 \n",
+    "# 개별 파일들의 파일 내용은 DataFrame 로딩 후 다시 string으로 변환하여 opinion_text 리스트로 취합 \n",
     "for file_ in all_files:\n",
     "    # 개별 파일을 읽어서 DataFrame으로 생성 \n",
     "    df = pd.read_table(file_,index_col=None, header=0,encoding='latin1')\n",
     "    \n",
-    "    # 절대경로로 주어진 file 명을 가공. 만일 Linux에서 수행시에는 아래 \\\\를 / 변경. 맨 마지막 .data 확장자도 제거\n",
+    "    # 절대경로로 주어진 file 명을 가공. 만일 Linux에서 수행시에는 아래 \\\\를 / 변경. \n",
+    "    # 맨 마지막 .data 확장자도 제거\n",
     "    filename_ = file_.split('\\\\')[-1]\n",
     "    filename = filename_.split('.')[0]\n",
     "\n",
-    "    # 파일명 리스트와 파일내용 리스트에 파일명과 파일 내용을 추가. \n",
+    "    # 파일명 리스트와 파일 내용 리스트에 파일명과 파일 내용을 추가. \n",
     "    filename_list.append(filename)\n",
     "    opinion_text.append(df.to_string())\n",
     "\n",
-    "# 파일명 리스트와 파일내용 리스트를 DataFrame으로 생성\n",
+    "# 파일명 리스트와 파일 내용 리스트를  DataFrame으로 생성\n",
     "document_df = pd.DataFrame({'filename':filename_list, 'opinion_text':opinion_text})\n",
     "document_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TfidfVectorizer의 tokenizer인자로 사용될 lemmatization 어근 변환 함수를 설정. "
    ]
   },
   {
@@ -134,11 +142,23 @@
     "remove_punct_dict = dict((ord(punct), None) for punct in string.punctuation)\n",
     "lemmar = WordNetLemmatizer()\n",
     "\n",
+    "# 입력으로 들어온 token단어들에 대해서 lemmatization 어근 변환. \n",
     "def LemTokens(tokens):\n",
     "    return [lemmar.lemmatize(token) for token in tokens]\n",
     "\n",
+    "# TfidfVectorizer 객체 생성 시 tokenizer인자로 해당 함수를 설정하여 lemmatization 적용\n",
+    "# 입력으로 문장을 받아서 stop words 제거-> 소문자 변환 -> 단어 토큰화 -> lemmatization 어근 변환. \n",
     "def LemNormalize(text):\n",
     "    return LemTokens(nltk.word_tokenize(text.lower().translate(remove_punct_dict)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TF-IDF 기반 Vectorization 적용 및 KMeans 군집화 수행. \n",
+    "* Stemming과 Lemmatization 같은 어근 변환은 TfidfVectorizer에서 직접 지원하진 않으나 tokenizer 파라미터에 커스텀 어근 변환 함수를 적용하여 어근 변환을 수행할 수 있음\n",
+    "* TfidfVectorizer 생성자의 tokenizer인자로 위에서 생성 LemNormalize 함수 설정."
    ]
   },
   {
@@ -273,7 +293,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1629,6 +1651,20 @@
     "                                  feature_names=feature_names, clusters_num=3, top_n_features=10 )\n",
     "print_cluster_details(cluster_details)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
