Update 8.8 문서 유사도 .ipynb

--- a/8장/8.8 문서 유사도 .ipynb
+++ b/8장/8.8 문서 유사도 .ipynb
@@ -200,9 +200,12 @@
     "remove_punct_dict = dict((ord(punct), None) for punct in string.punctuation)\n",
     "lemmar = WordNetLemmatizer()\n",
     "\n",
+    "# 입력으로 들어온 token단어들에 대해서 lemmatization 어근 변환. \n",
     "def LemTokens(tokens):\n",
     "    return [lemmar.lemmatize(token) for token in tokens]\n",
     "\n",
+    "# TfidfVectorizer 객체 생성 시 tokenizer인자로 해당 함수를 설정하여 lemmatization 적용\n",
+    "# 입력으로 문장을 받아서 stop words 제거-> 소문자 변환 -> 단어 토큰화 -> lemmatization 어근 변환. \n",
     "def LemNormalize(text):\n",
     "    return LemTokens(nltk.word_tokenize(text.lower().translate(remove_punct_dict)))"
    ]
@@ -211,21 +214,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\yong\\anaconda3\\envs\\pymldgrev2\\lib\\site-packages\\sklearn\\feature_extraction\\text.py:396: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['ha', 'le', 'u', 'wa'] not in stop_words.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import glob, os\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.cluster import KMeans\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "path = r'OpinosisDataset1.0\\topics'\n",
     "all_files = glob.glob(os.path.join(path, \"*.data\"))     \n",
@@ -288,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
